--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,21 +1,16 @@
-.container {
-    width: 900px;
-    margin: auto;
-}
-
+/*Style css*/
 .banner {
-    background-image: url('../../images/background.png');
-    background-size: cover;
-    background-position: center;
-    padding: 200px 0;
+padding: 200px 0;
+background-position: center;
+background-size: cover;
 }
 
 .banner h1 {
-    color: white;
+color: red;
 }
 
-.banner p {
-    color: white;
-    opacity: .7;
-    font-size: 20px;
+.banner P {
+color: white;
+font-size: 30px;
+opacity: .7;
 }
