--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,7 +1,9 @@
+/* style button */
+
 .btn-primary {
-    display: inline-block;
-    background-color: #1EDD88;
-    padding: 16px 36px;
-    border-radius: 50px;
-    color: white;
+background-color: #1EDD88;
+border-radius: 50px;
+color :white;
+padding: 16px 36px;
+display: inline-block;
 }
